--- a/Lab3.html
+++ b/Lab3.html
@@ -2,9 +2,9 @@
 <html>
     <body>
         <h2>Follow Me</h2>
-        <a href="www.facebook.com">facebook</a>
-        <a href="www.instagram.com">Instagram</a>
-        <a href="www.youtube.com">Youtube</a>
+        <a href="http://facebook.com">facebook</a>
+        <a href="http://instagram.com">Instagram</a>
+        <a href="http://youtube.com">Youtube</a>
         <a href="lab3-2.html">Next Page</a>
     </body>
 </html>
